--- a/web4test/src/main/webapp/qna/css/default.css
+++ b/web4test/src/main/webapp/qna/css/default.css
@@ -50,8 +50,8 @@ a:hover {
 }
 
 .container{
-	border : 1px red solid;
-	width : 100%;
+/* 	border : 1px red solid;
+ */	width : 100%;
 	height : 100%;
     padding : 5em 3em 5em 20em; 
 	
