--- a/web4test/src/main/webapp/test/css/test02.css
+++ b/web4test/src/main/webapp/test/css/test02.css
@@ -58,6 +58,18 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
   /* font: inherit; */
   /* vertical-align: baseline; */
 }
+.is-editing .reveal section:not(.stack):before {
+  content: '';
+  display: block;
+  border: 1px dashed rgba(150,150,150,0.5);
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: absolute;
+  width: 90%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
 
 
 .page-wrapper {
