--- a/web4test/src/main/webapp/edit/css/Edit.css
+++ b/web4test/src/main/webapp/edit/css/Edit.css
@@ -21,7 +21,6 @@ body {
   background-color: #fff;
   color: #000;
 }
-
 body {
   height: 100%;
   min-width: 1220px;
@@ -54,17 +53,95 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
   margin-bottom: 0px;
   margin-left: 0px;
   padding: 0;
+  /* border: 0; */
+  /* font-size: 100%; */
+  /* font: inherit; */
+  /* vertical-align: baseline; */
 }
+/*.is-editing .reveal section:not(.stack):before {*/
+/*.is-editing .reveal section:before {*/
+  /*content: '';*/
+  /*display: block;*/
+  /*border: 1px dashed rgba(150,150,150,0.5);*/
+  /*-moz-box-sizing: border-box;*/
+  /*box-sizing: border-box;*/
+  /*position: absolute;*/
+  /*width: 90%;*/
+  /*height: 100%;*/
+  /*left: 0;*/
+  /*top: 0;*/
+/*}*/
 
-div.page-wrapper{
+
+.page-wrapper {
   position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
   padding-left: 240px;
 }
+.projector {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.projector .reveal-viewport {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+.projector .reveal-viewport .reveal {
+  position: relative;
+  z-index: 10;
+}
+.reveal .slides {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  overflow: visible;
+  z-index: 1;
+  text-align: center;
+  -webkit-perspective: 600px;
+  perspective: 600px;
+  -webkit-perspective-origin: 50% 40%;
+  perspective-origin: 50% 40%;
+}
 
-sidebar.preview-controls {
+
+
+
+/*//////////////////////*/
+
+
+div.canvas {
+  position: absolute;
+  top: 0px;
+  left: 70px;
+  width: 1000px;
+  height: 800px;
+  background-color: rgb(255,248,220);
+  border: solid red 1px;
+}
+.preview-controls {
+  position: absolute;
+  top: 10px;
+  left: 8px;
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  -webkit-transform: translateX(50px);
+  -ms-transform: translateX(50px);
+  transform: translateX(50px);
+}
+ sidebar.preview-controls {
   position: absolute;
   top: 10px;
   left: 8px;
@@ -72,24 +149,88 @@ sidebar.preview-controls {
   visibility: hidden;
   opacity: 0;
 }
+.page-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  padding-left: 240px;
+}
 
-
-
-div.sidebar {
+/* sidebar ******************************************/
+.sidebar {
   position: absolute;
   width: 70px;
   height: 100%;
   left: 0;
   top: 0;
+  padding: 0;
+  z-index: 102;
   background: #222;
   font-size: 17px;
-  z-index: 100;
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
 }
 
+
+/* 1st primary */
 .sidebar .primary {
   width: 100%;
+  border-bottom: 1px solid #333;
+}
+
+.sidebar .primary .button {
+  display: inline-block;
+  height: 50px;
+  padding: 0;
+  margin-bottom: 6px;
+  background: #40cb90;
+  text-align: center;
+}
+
+.sidebar .primary .undo {
+  background: #666666;
+}
+
+.sidebar .primary .save {
+  background: #666666;
+}
+
+body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
+  display: inline-block;
+  height: 50px;
+  padding: 0;
+  margin-bottom: 6px;
+  background: #40cb90;
+  text-align: center;
+
+  width: 50px;
+}
+.sidebar .primary .button:hover {
+  background: #68d6a7;
+}
+
+/* 2nd */
+.sidebar .secondary {
+  position: relative;
+  overflow: auto;
+  padding: 0 0 8px 0;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+.sidebar .secondary .button:not(.active):not(:hover) {
+  -webkit-transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease;
+}
+.sidebar .secondary .button+.button {
+  border-top: 1px solid #2a2a2a;
+}
+/* 2nd hover */
+.sidebar .secondary .button:hover {
+  background: #333;
+}
+.sidebar .primary .button:hover, .sidebar .secondary .button:hover {
+  background: #515151;
 }
 
 .sidebar .primary .button {
@@ -104,17 +245,6 @@ div.sidebar {
   background: #bec3bf;
   cursor: pointer;
   text-align: center;
-}
-
-body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
-  display: inline-block;
-  height: 50px;
-  padding: 0;
-  margin-bottom: 6px;
-  background: #40cb90;
-  text-align: center;
-
-  width: 50px;
 }
 
 .sidebar .secondary {
@@ -143,61 +273,8 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
 }
 
 
-.sidebar .global-header {
-position: absolute;
-  width: 100%;
-  height: 52px;
-  line-height: 52px;
-  bottom: 0;
-  left: 0;
-  border-top: 1px solid #111;
-  border-bottom: 0;
-  background: #111;
-  background: -webkit-linear-gradient(top, #222 0%, #111 100%);
-  background: linear-gradient(to bottom, #222 0%, #111 100%);
-}
 
-
-
-.sidebar .global-header .wrapper  {
-  display: block;
-  position: absolute;
-  width: 30px;
-  height : 40px;
-  padding : 0 10px;
-  margin : 10px;
-  color: #eee;
-}
-
-div.nav-item{
-  visibility:hidden;
-  position: absolute;
-  bottom : 33px;
-  left : 20px; 
-  width :130px;
-  height : 220px;
-  color: #eee;
-  background: #2b2b2b;
-  z-index : 130;
-}
-
-
-.nav-item .button {
-  display: block;
-  position: relative;
-  width: 120px;
-  height : 40px;
-  margin: 3px;
-  color: #eee;
-  border: 0;
-  cursor: pointer;
-  background: #222;
-}
-
-
----------------------------------------------
-
-
+/* toolbars */
 .toolbars.visible {
   visibility: visible;
 }
@@ -212,7 +289,7 @@ div.nav-item{
   background: #333333;
   border-right: 1px solid #222;
   border-left: 1px solid #222;
-  visibility: visible;
+  visibility: hidden;
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
 }
@@ -337,63 +414,7 @@ div.nav-item{
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-
-.projector {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.projector .reveal-viewport {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-}
-.projector .reveal-viewport .reveal {
-  position: relative;
-  z-index: 10;
-}
-.reveal .slides {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  overflow: visible;
-  z-index: 1;
-  text-align: center;
-  -webkit-perspective: 600px;
-  perspective: 600px;
-  -webkit-perspective-origin: 50% 40%;
-  perspective-origin: 50% 40%;
-}
-
-
-div.canvas {
-  position: absolute;
-  top: 0px;
-  left: 70px;
-  width: 1000px;
-  height: 800px;
-  background-color: rgb(255,248,220);
-  border: solid red 1px;
-}
-.preview-controls {
-  position: absolute;
-  top: 10px;
-  left: 8px;
-  z-index: 1000;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-  -webkit-transform: translateX(50px);
-  -ms-transform: translateX(50px);
-  transform: translateX(50px);
-}
+/*  ****  */
 
 .reveal .sl-block {
   display: block;
@@ -555,4 +576,54 @@ div.sl-block-content.isFocus {
   height: 700px;
   font-weight: inherit;
   padding: 0;
+}
+section {
+  /*background-color: #c2fcad ;*/
+  
+  border: red solid 1px;
+  
+  
+	
+}
+.sl-block {
+  border: red solid 1px;
+}
+<!-- 아 힘들다 -->
+
+.global-header {
+  position: absolute;
+  width: 100%;
+  height: 52px;
+  line-height: 52px;
+  bottom: 0;
+  left: 0;
+  border-top: 1px solid #111;
+  border-bottom: 0;
+  background: #ababab;
+  background: -webkit-linear-gradient(top, #222 0%, #111 100%);
+  background: linear-gradient(to bottom, #222 0%, #111 100%);
+}
+
+div.nav-item{
+  visibility:hidden;
+  position: absolute;
+  bottom : 33px;
+  left : 20px; 
+  width :130px;
+  height : 220px;
+  color: #eee;
+  background: #2b2b2b;
+  z-index : 130;
+}
+
+.nav-item .button {
+  display: block;
+  position: relative;
+  width: 120px;
+  height : 40px;
+  margin: 3px;
+  color: #eee;
+  border: 0;
+  cursor: pointer;
+  background: #222;
 }
