--- a/web4test/src/main/webapp/edit/css/Edit00.css
+++ b/web4test/src/main/webapp/edit/css/Edit00.css
@@ -21,6 +21,7 @@ body {
   background-color: #fff;
   color: #000;
 }
+
 body {
   height: 100%;
   min-width: 1220px;
@@ -53,140 +54,56 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
   margin-bottom: 0px;
   margin-left: 0px;
   padding: 0;
-  /* border: 0; */
-  /* font-size: 100%; */
-  /* font: inherit; */
-  /* vertical-align: baseline; */
 }
-/*.is-editing .reveal section:not(.stack):before {*/
-/*.is-editing .reveal section:before {*/
-  /*content: '';*/
-  /*display: block;*/
-  /*border: 1px dashed rgba(150,150,150,0.5);*/
-  /*-moz-box-sizing: border-box;*/
-  /*box-sizing: border-box;*/
-  /*position: absolute;*/
-  /*width: 90%;*/
-  /*height: 100%;*/
-  /*left: 0;*/
-  /*top: 0;*/
-/*}*/
 
-
-.page-wrapper {
+div.page-wrapper{
   position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
   padding-left: 240px;
 }
-.projector {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.projector .reveal-viewport {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-}
-.projector .reveal-viewport .reveal {
-  position: relative;
-  z-index: 10;
-}
-.reveal .slides {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  overflow: visible;
-  z-index: 1;
-  text-align: center;
-  -webkit-perspective: 600px;
-  perspective: 600px;
-  -webkit-perspective-origin: 50% 40%;
-  perspective-origin: 50% 40%;
-}
 
-
-
-
-/*//////////////////////*/
-
-
-div.canvas {
-  position: absolute;
-  top: 0px;
-  left: 70px;
-  width: 1000px;
-  height: 800px;
-  background-color: rgb(255,248,220);
-  border: solid red 1px;
-}
-.preview-controls {
+sidebar.preview-controls {
   position: absolute;
   top: 10px;
   left: 8px;
   z-index: 1000;
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-  -webkit-transform: translateX(50px);
-  -ms-transform: translateX(50px);
-  transform: translateX(50px);
-}
-.page-wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  padding-left: 240px;
 }
 
-/* sidebar ******************************************/
-.sidebar {
+
+
+div.sidebar {
   position: absolute;
   width: 70px;
   height: 100%;
   left: 0;
   top: 0;
-  padding: 0;
-  z-index: 102;
   background: #222;
   font-size: 17px;
+  z-index: 100;
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
 }
 
-
-/* 1st primary */
 .sidebar .primary {
   width: 100%;
-  padding: 6px 8px 6px 8px;
-  border-bottom: 1px solid #333;
 }
 
 .sidebar .primary .button {
-  display: inline-block;
-  height: 50px;
+  width: 50px;
+  height : 50px;
+  margin : 10px;
   padding: 0;
-  margin-bottom: 6px;
-  background: #40cb90;
+  display: inline-block;
+  color: #fff;
+  border: 0;
+  border-radius: 3px;
+  background: #bec3bf;
+  cursor: pointer;
   text-align: center;
-}
-
-.sidebar .primary .undo {
-  background: #666666;
-}
-
-.sidebar .primary .save {
-  background: #666666;
 }
 
 body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
@@ -199,73 +116,88 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
 
   width: 50px;
 }
-.sidebar .primary .button:hover {
-  background: #68d6a7;
-}
 
-/* 2nd */
 .sidebar .secondary {
+  height: 524px;
   position: relative;
   overflow: auto;
+  line-height: initial;
   padding: 0 0 8px 0;
+  display: block;
+  overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
-.sidebar .secondary .button:not(.active):not(:hover) {
-  -webkit-transition: opacity 0.5s ease;
-  transition: opacity 0.5s ease;
-}
-.sidebar .secondary .button+.button {
-  border-top: 1px solid #2a2a2a;
-}
-/* 2nd hover */
-.sidebar .secondary .button:hover {
-  background: #333;
-}
-.sidebar .primary .button:hover, .sidebar .secondary .button:hover {
-  background: #515151;
-}
 
-.sidebar .primary .button, .sidebar .secondary .button {
+.sidebar .secondary .button {
   display: block;
   position: relative;
-  width: 100%;
-  padding: 10px;
-  margin-top: 4px;
-  font-size: 13px;
+  width: 50px;
+  height : 50px;
+  margin : 10px;
   color: #eee;
-  border-radius: 2px;
-  cursor: pointer;
-  text-align: left;
-  line-height: initial;
-  background: #444;
-  -webkit-transition: background 0.12s ease;
-  transition: background 0.12s ease;
-  -webkit-font-smoothing: initial;
-}
-.button {
-  display: inline-block;
-  color: #fff;
-  text-decoration: none;
-  font-family: "Open Sans", Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: inherit;
-  line-height: 1;
-  outline: 0;
   border: 0;
-  border-radius: 2px;
-  background: #40cb90;
   cursor: pointer;
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  padding: 8px 12px;
-  -webkit-transition: all 0.14s ease;
-  transition: all 0.14s ease;
+  background: #222;
+}
+
+
+.sidebar .global-header {
+position: absolute;
+  width: 100%;
+  height: 52px;
+  line-height: 52px;
+  bottom: 0;
+  left: 0;
+  border-top: 1px solid #111;
+  border-bottom: 0;
+  background: #111;
+  background: -webkit-linear-gradient(top, #222 0%, #111 100%);
+  background: linear-gradient(to bottom, #222 0%, #111 100%);
 }
 
 
 
-/* toolbars */
+.sidebar .global-header .wrapper  {
+  display: block;
+  position: absolute;
+  width: 30px;
+  height : 40px;
+  padding : 0 10px;
+  margin : 10px;
+  color: #eee;
+}
+
+div.nav-item{
+  visibility:hidden;
+  position: absolute;
+  bottom : 33px;
+  left : 20px; 
+  width :130px;
+  height : 220px;
+  color: #eee;
+  background: #2b2b2b;
+  z-index : 130;
+}
+
+
+.nav-item .button {
+  display: block;
+  position: relative;
+  width: 120px;
+  height : 40px;
+  margin: 3px;
+  color: #eee;
+  border: 0;
+  cursor: pointer;
+  background: #222;
+}
+
+
+---------------------------------------------
+
+
 .toolbars.visible {
   visibility: visible;
 }
@@ -280,7 +212,7 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   background: #333333;
   border-right: 1px solid #222;
   border-left: 1px solid #222;
-  visibility: hidden;
+  visibility: visible;
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
 }
@@ -333,12 +265,29 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   right: 0;
   bottom: 0;
   left: 0;
+  visibility: hidden;
   overflow-y: auto;
   overflow-x: hidden;
   padding: 12px;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
+
+.toolbars .toolbar .text-list {
+  background : red;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  visibility: visible;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 12px;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
 .toolbars .toolbar-add-block-option {
   width: 80%;
   margin: 0 auto;
@@ -405,7 +354,63 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-/*  ****  */
+
+.projector {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.projector .reveal-viewport {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+.projector .reveal-viewport .reveal {
+  position: relative;
+  z-index: 10;
+}
+.reveal .slides {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  overflow: visible;
+  z-index: 1;
+  text-align: center;
+  -webkit-perspective: 600px;
+  perspective: 600px;
+  -webkit-perspective-origin: 50% 40%;
+  perspective-origin: 50% 40%;
+}
+
+
+div.canvas {
+  position: absolute;
+  top: 0px;
+  left: 70px;
+  width: 1000px;
+  height: 800px;
+  background-color: rgb(255,248,220);
+  border: solid red 1px;
+}
+.preview-controls {
+  position: absolute;
+  top: 10px;
+  left: 8px;
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  -webkit-transform: translateX(50px);
+  -ms-transform: translateX(50px);
+  transform: translateX(50px);
+}
 
 .reveal .sl-block {
   display: block;
